--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0",
+
     "@types/styled-components": "^5.1.26",
     "file-loader": "^6.2.0"
   }
