--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^1.2.3npm cache clean --force
+    ",
 
     "@types/styled-components": "^5.1.26",
     "file-loader": "^6.2.0"
